grammar.js
    source_file: ($) => repeat($._structure_item),

    _structure_item: ($) =>
      choice(
        prec(PREC.TOP_LEVEL_EXPRESSION, $.expression),
        prec(PREC.MODULE_DECLARATION, $._module)
      ),

    ////////////////////////////////////////////////////////////////////////////
    //
    // Modules
    //
    ////////////////////////////////////////////////////////////////////////////

    function_declaration: ($) => seq(sepBy(SEMI, $.function_clause), DOT),

    function_clause: ($) =>
      prec(PREC.FUNCTION_CLAUSE, seq(field("name", $.atom), $.lambda_clause)),

    type_declaration: ($) =>
      seq(
        DASH,
        choice("type", "opaque"),
        field("name", $.atom),
        args($.variable),
        DOUBLE_COLON,
        field("def", $.type_expression),
        DOT
      ),

    function_spec: ($) =>
      seq(
        DASH,
        choice("spec", "callback"),
        field("name", $.atom),
        sepBy(
          SEMI,
          seq(
            args($.type_expression),
            ARROW,
            field("def", $.type_expression),
            opt($.spec_when_clause)
          )
        ),
        DOT
      ),

    type_binding: ($) => seq($.variable, DOUBLE_COLON, $.type_expression),

    type_expression: ($) =>
      sepBy(
        PIPE,
        choice(
          $.type_atom,
          $.type_application,
          $.type_bitstring,
          $.type_fun,
          $.type_integer,
          $.type_map,
          $.type_record,
          $.type_tuple,
          $.type_variable,
          $._type_list
        )
      ),

    type_variable: ($) => $.variable,

    type_atom: ($) => $.atom,

    type_application: ($) =>
      prec.right(
        PREC.MACRO_APPLICATION,
        seq(opt(seq($.atom, COLON)), $.atom, args($.type_expression))
      ),

    _type_list: ($) => choice($.type_list, $.type_nonempty_list),

    type_list: ($) => delim(BRACKET_LEFT, $.type_expression, BRACKET_RIGHT),

    type_nonempty_list: ($) =>
      delim(
        BRACKET_LEFT,
        seq($.type_expression, COMMA, DOT_DOT_DOT),
        BRACKET_RIGHT
      ),

    type_tuple: ($) => tuple($.type_expression),

    type_map: ($) =>
      seq(HASH, BRACE_LEFT, opt(sepBy(COMMA, $.type_map_entry)), BRACE_RIGHT),
    type_record: ($) =>
      seq(
        HASH,
        $.atom,
        BRACE_LEFT,
        opt(sepBy(COMMA, $.type_record_field)),
        BRACE_RIGHT
      ),
    pattern: ($) =>
      prec(
        PREC.PATTERN,
        sepBy(EQUAL, choice($.term, $.variable, $.pat_list, $.pat_tuple))
      ),

    pat_list: ($) =>
      prec(PREC.PATTERN, choice(list($.pattern), $.pat_list_cons)),

    pat_list_cons: ($) =>
      delim(
        BRACKET_LEFT,
        seq(
          field("init", sepBy(COMMA, $.pattern)),
          PIPE,
          field("tail", $.pattern)
        ),
        BRACKET_RIGHT
      ),

    pat_tuple: ($) => prec(PREC.PATTERN, tuple($.pattern)),
    expr_record_access: ($) =>
      prec.left(
        PREC.EXPR_MAP_UPDATE,
        seq($.expression, HASH, $.atom, DOT, $.atom)
      ),

    expr_record_update: ($) =>
      prec.left(PREC.EXPR_MAP_UPDATE, seq($.expression, $.record)),

    expr_try: ($) =>
      seq(
        "try",
        sepBy(COMMA, $.expression),
        opt(seq("of", sepBy(SEMI, $.case_clause))),
        choice($.expr_try_catch, $.expr_try_after, $._expr_try_catch_after),
        "end"
      ),

    expr_try_catch: ($) => seq("catch", sepBy(SEMI, $.catch_clause)),
    expr_try_after: ($) => seq("after", $.expression),
    _expr_try_catch_after: ($) => seq($.expr_try_catch, $.expr_try_after),
    catch_clause: ($) =>
      seq(
        field("pattern", $.catch_pattern),
        opt($.guard_clause),
        ARROW,
        field("body", sepBy(COMMA, $.expression))
      ),
    catch_pattern: ($) =>
      seq(
        field("class", $.pattern),
        field("exception", opt(seq(COLON, $.pattern))),
        field("stacktrace", opt(seq(COLON, $.variable)))
      ),

    expr_catch: ($) => prec.left(seq("catch", $.expression)),
    expr_throw: ($) => prec.left(seq("throw", $.expression)),

    expr_list_comprehension: ($) =>
      seq(
        BRACKET_LEFT,
        $.expression,
        DOUBLE_PIPE,
        $.expr_list_generator,
        opt(seq(COMMA, $.expr_list_filter)),
        BRACKET_RIGHT
      ),

    expr_list_filter: ($) => sepBy(COMMA, $.expression),

    expr_op: ($) => choice($._expr_operator_unary, $._expr_operator_binary),

    _expr_operator_unary: ($) =>
      prec.right(
        PREC.UNARY_OP,
        seq(field("operator", oneOf(OP1)), field("operand", $.expression))
      ),

    _expr_operator_binary: ($) =>
      choice(
        prec.left(
          PREC.BINARY_OP,
          seq(
            field("lhs", $.expression),
            field("operator", oneOf(OP2_LEFT_ASSOC)),
            field("rhs", $.expression)
          )
        ),
        prec.right(
          PREC.BINARY_OP,
          seq(
            field("lhs", $.expression),
            field("operator", oneOf(OP2_RIGHT_ASSOC)),
            field("rhs", $.expression)
          )
        )
      ),

    expr_list: ($) =>
      prec(PREC.EXPR_LIST_CONS, choice(list($.expression), $.expr_list_cons)),

    expr_list_cons: ($) =>
      delim(
        BRACKET_LEFT,
        seq(
          field("init", sepBy(COMMA, $.expression)),
          PIPE,
          field("tail", $.expression)
        ),
        BRACKET_RIGHT
      ),

    case_clause: ($) =>
      seq(
        field("pattern", $.pattern),
        opt($.guard_clause),
        ARROW,
        field("body", sepBy(COMMA, $.expression))
      ),

    guard_clause: ($) => seq("when", $.guard_seq),
    guard_seq: ($) => sepBy(SEMI, $.guard),
    guard: ($) => sepBy(COMMA, $.expression),

    expr_match: ($) =>
      prec.right(PREC.MATCH, seq($.expression, EQUAL, $.expression)),

    expr_lambda: ($) => seq("fun", sepBy(SEMI, $.lambda_clause), "end"),

    lambda_clause: ($) =>
      seq(
        field("arguments", args($.pattern)),
        opt($.guard_clause),
        ARROW,
        field("body", sepBy(COMMA, $.expression))
      ),

    expr_function_call: ($) =>
      seq(field("name", $._function_name), args($.expression)),

    _function_name: ($) =>
      prec(
        PREC.FUNCTION_NAME,
        choice($.computed_function_name, $.qualified_function_name)
      ),

    computed_function_name: ($) =>
      prec(
        PREC.FUNCTION_NAME,
        choice($.variable, $.atom, parens($.expression))
      ),

    expr_macro_application: ($) =>
      prec.right(
        PREC.MACRO_APPLICATION,
        seq(QUESTION, $._macro_name, opt(args($.expression)))
      ),

    _macro_name: ($) => choice($.variable, $.atom),

    variable: ($) =>
      /[_A-Z\xC0-\xD6\xD8-\xDE][_@a-zA-Z0-9\xC0-\xD6\xD8-\xDE\xDF-\xF6\xF8-\xFF]*/,

    tuple: ($) => tuple($.expression),

    atom: ($) => field("value", choice($._unquoted_atom, $._quoted_atom)),
    _unquoted_atom: ($) =>
      /[a-z\xDF-\xF6\xF8-\xFF][_@a-zA-Z0-9\xC0-\xD6\xD8-\xDE\xDF-\xF6\xF8-\xFF]*/,
    _quoted_atom: ($) => seq("'", repeat(choice(/[^'\\]+/, $._escape)), "'"),

    integer: ($) =>
      choice(
        // binary syntax
        /-?2#[01_]+/,
        // hex syntax
        /-?16#[a-fA-F0-9_]+/,
        // regular "other base" syntax
        /-?([\d*_]*#)?[\d_]+/
      ),
    float: ($) => /-?([\d_]*#)?[\d_]+\.[\d_]+(e-?[\d_]+)?/,

    string: ($) =>
      prec.right(repeat1(seq('"', repeat(choice(/[^"\\]+/, $._escape)), '"'))),

    _escape: ($) =>
      token(
        seq(
          "\\",
          choice(
            /[0-7]{1,3}/,
            /x[0-9a-fA-F]{2}/,
            /x{[0-9a-fA-F]+}/,
            "\n",
            /[nrtvbfesd"]/
          )
        )
      ),

    binary_string: ($) =>
      seq(BINARY_LEFT, opt(sepBy(COMMA, $.bin_part)), BINARY_RIGHT),
    bin_part: ($) =>
      choice(
        seq(
          choice($.integer, $.float, $.string, $.char, $.variable),
          opt($.bin_sized),
          opt($.bin_type_list)
        ),
        seq(parens($.expression), opt($.bin_sized), opt($.bin_type_list))
      ),
    bin_sized: ($) => seq(/:/, $.integer),
    bin_type_list: ($) => seq(/\//, sepBy(DASH, $.bin_type)),
    bin_type: ($) =>
      choice(
        "big",
        "binary",
        "bits",
        "bitstring",
        "bytes",
        "float",
        "integer",
        "little",
        "native",
        "signed",
        "unsigned",
        "utf16",
        "utf32",
        "utf8"
      ),

    map: ($) =>
      seq(HASH, BRACE_LEFT, opt(sepBy(COMMA, $.map_entry)), BRACE_RIGHT),
    map_entry: ($) =>
      seq(
        choice($.term, $.variable),
        choice(FAT_ARROW, COLON_EQUAL),
        $.expression
      ),

    record: ($) =>
      seq(
        HASH,
        $.atom,
        BRACE_LEFT,
        opt(sepBy(COMMA, $.record_field)),
        BRACE_RIGHT
      ),
    record_field: ($) => seq($.term, EQUAL, $.expression),
  },
});
