test/corpus/expr_list.txt
================================================================================
comprehensions
================================================================================

[ (X*2) || X <- [ 1,2,3 ], X > 2 ]

--------------------------------------------------------------------------------

(source_file
  (expr_list_comprehension
    (expr_op
      (variable)
      (integer))
    (expr_generator
      (variable)
      (expr_list
        (integer)
        (integer)
        (integer)))
    (expr_list_filter
      (expr_op
        (variable)
        (integer)))))
