test/corpus/expr_match.txt
================================================================================
binding
================================================================================

A = 1

--------------------------------------------------------------------------------

(source_file
  (expr_match
    (variable)
    (integer)))

================================================================================
matching on constants
================================================================================

1 = A

--------------------------------------------------------------------------------

(source_file
  (expr_match
    (integer)
    (variable)))

================================================================================
matching on tuples
================================================================================

{A, 1} = B

--------------------------------------------------------------------------------

(source_file
  (expr_match
    (tuple
      (variable)
      (integer))
    (variable)))

================================================================================
matching on maps
================================================================================

#{ a := A } = B

--------------------------------------------------------------------------------

(source_file
  (expr_match
    (map
      (map_entry
        (atom)
        (variable)))
    (variable)))

================================================================================
matching on lists
================================================================================

[] = L
[1|_] = L2
[1, B] = L3
[1, B | T ] = L4

--------------------------------------------------------------------------------

(source_file
  (expr_match
    (expr_list)
    (variable))
  (expr_match
    (expr_list
      (expr_list_cons
        (integer)
        (variable)))
    (variable))
  (expr_match
    (expr_list
      (integer)
      (variable))
    (variable))
  (expr_match
    (expr_list
      (expr_list_cons
        (integer)
        (variable)
        (variable)))
    (variable)))

================================================================================
ignoring match
================================================================================

_ = 1

--------------------------------------------------------------------------------

(source_file
  (expr_match
    (variable)
    (integer)))

================================================================================
bindings on right-hand-sides of patterns
================================================================================

get_state(#state{} = state) -> State.

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (function_clause
      (atom)
      (lambda_clause
        (pattern
          (record
            (atom))
          (atom))
        (variable)))))

================================================================================
nested bindings on right-hand-sides of patterns
================================================================================

get_state([{label, _} = _Label | Rest]) -> Rest.

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (function_clause
      (atom)
      (lambda_clause
        (pattern
          (pat_list
            (pat_list_cons
              (pattern
                (pat_tuple
                  (pattern
                    (atom))
                  (pattern
                    (variable)))
                (variable))
              (pattern
                (variable)))))
        (variable)))))
