test/corpus/term_binary_string.txt
================================================================================
empty
================================================================================

<<>>

--------------------------------------------------------------------------------

(source_file
  (binary_string))

================================================================================
with integer
================================================================================

<<10>>

--------------------------------------------------------------------------------

(source_file
  (binary_string
    (bin_part
      (integer))))

================================================================================
with integer and type-specifier
================================================================================

<<10/integer>>

--------------------------------------------------------------------------------

(source_file
  (binary_string
    (bin_part
      (integer)
      (bin_type_list
        (bin_type)))))

================================================================================
with integer and multiple type-specifier
================================================================================

<<10/integer-signed-native>>

--------------------------------------------------------------------------------

(source_file
  (binary_string
    (bin_part
      (integer)
      (bin_type_list
        (bin_type)
        (bin_type)
        (bin_type)))))

================================================================================
with integer and bit-pattern size
================================================================================

<<10:2>>

--------------------------------------------------------------------------------

(source_file
  (binary_string
    (bin_part
      (integer)
      (bin_sized
        (integer)))))

================================================================================
with integer and bit-pattern size and type-specifier
================================================================================

<<10:2/little>>

--------------------------------------------------------------------------------

(source_file
  (binary_string
    (bin_part
      (integer)
      (bin_sized
        (integer))
      (bin_type_list
        (bin_type)))))

================================================================================
with integer and bit-pattern size and multiple type-specifiers
================================================================================

<<10:2/little-unsigned>>

--------------------------------------------------------------------------------

(source_file
  (binary_string
    (bin_part
      (integer)
      (bin_sized
        (integer))
      (bin_type_list
        (bin_type)
        (bin_type)))))

================================================================================
with float
================================================================================

<<10.10>>

--------------------------------------------------------------------------------

(source_file
  (binary_string
    (bin_part
      (float))))

================================================================================
with float and type-specifier
================================================================================

<<10.10/float>>

--------------------------------------------------------------------------------

(source_file
  (binary_string
    (bin_part
      (float)
      (bin_type_list
        (bin_type)))))

================================================================================
with float and multiple type-specifier
================================================================================

<<10.10/float-signed-native>>

--------------------------------------------------------------------------------

(source_file
  (binary_string
    (bin_part
      (float)
      (bin_type_list
        (bin_type)
        (bin_type)
        (bin_type)))))

================================================================================
with float and bit-pattern size
================================================================================

<<10.10:2>>

--------------------------------------------------------------------------------

(source_file
  (binary_string
    (bin_part
      (float)
      (bin_sized
        (integer)))))

================================================================================
with float and bit-pattern size and type-specifier
================================================================================

<<10.10:2/little>>

--------------------------------------------------------------------------------

(source_file
  (binary_string
    (bin_part
      (float)
      (bin_sized
        (integer))
      (bin_type_list
        (bin_type)))))

================================================================================
with float and bit-pattern size and multiple type-specifiers
================================================================================

<<10.10:2/little-unsigned>>

--------------------------------------------------------------------------------

(source_file
  (binary_string
    (bin_part
      (float)
      (bin_sized
        (integer))
      (bin_type_list
        (bin_type)
        (bin_type)))))

================================================================================
with string
================================================================================

<<"10">>

--------------------------------------------------------------------------------

(source_file
  (binary_string
    (bin_part
      (string))))

================================================================================
with many components
================================================================================

<<10:1/native, "hello", 10.2/unsigned, (A)/binary, (B):8>>

--------------------------------------------------------------------------------

(source_file
  (binary_string
    (bin_part
      (integer)
      (bin_sized
        (integer))
      (bin_type_list
        (bin_type)))
    (bin_part
      (string))
    (bin_part
      (float)
      (bin_type_list
        (bin_type)))
    (bin_part
      (variable)
      (bin_type_list
        (bin_type)))
    (bin_part
      (variable)
      (bin_sized
        (integer)))))

================================================================================
with unit binary-type
================================================================================

<<N:Bytes/unit:8>>

--------------------------------------------------------------------------------

(source_file
  (binary_string
    (bin_part
      (variable)
      (bin_sized
        (variable))
      (bin_type_list
        (bin_type
          (integer))))))

================================================================================
macro within binary
================================================================================

<<?BEAM_TYPES_VERSION:32>>

--------------------------------------------------------------------------------

(source_file
  (binary_string
    (bin_part
      (expr_macro_application
        (variable))
      (bin_sized
        (integer)))))

================================================================================
function call within binary
================================================================================

<<(byte_size(F)):16,F/binary>>

--------------------------------------------------------------------------------

(source_file
  (binary_string
    (bin_part
      (expr_function_call
        (computed_function_name
          (atom))
        (variable))
      (bin_sized
        (integer)))
    (bin_part
      (variable)
      (bin_type_list
        (bin_type)))))
