test/corpus/term_record.txt
================================================================================
empty
================================================================================

#r{}

--------------------------------------------------------------------------------

(source_file
  (record
    (atom)))

================================================================================
record access
================================================================================

A#r.a

--------------------------------------------------------------------------------

(source_file
  (expr_record_access
    (variable)
    (atom)
    (atom)))

================================================================================
record position access
================================================================================

#r.a

--------------------------------------------------------------------------------

(source_file
  (expr_record_access
    (atom)
    (atom)))

================================================================================
with one key and value
================================================================================

#r{ hello = world }

--------------------------------------------------------------------------------

(source_file
  (record
    (atom)
    (record_field
      (atom)
      (atom))))

================================================================================
with many keys and values
================================================================================

#r{ hello = world
  , goodbye = moe
}

--------------------------------------------------------------------------------

(source_file
  (record
    (atom)
    (record_field
      (atom)
      (atom))
    (record_field
      (atom)
      (atom))))

================================================================================
updates
================================================================================

M#r{ 1 = V }
(f())#r{ k = V }

--------------------------------------------------------------------------------

(source_file
  (expr_record_update
    (variable)
    (record
      (atom)
      (record_field
        (integer)
        (variable))))
  (expr_record_update
    (expr_function_call
      (computed_function_name
        (atom)))
    (record
      (atom)
      (record_field
        (atom)
        (variable)))))

================================================================================
nested record updates
================================================================================

N2#nrec2.nrec1#nrec1.nrec0#nrec0{name = "nested0a"}

--------------------------------------------------------------------------------

(source_file
  (expr_record_update
    (expr_record_access
      (expr_record_access
        (variable)
        (atom)
        (atom))
      (atom)
      (atom))
    (record
      (atom)
      (record_field
        (atom)
        (string)))))
