test/corpus/types.txt
================================================================================
type application
================================================================================

-type alias() :: int().

-opaque opaque_alias() :: reference().

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (atom)
    (type_expression
      (type_application
        (atom))))
  (type_declaration
    (atom)
    (type_expression
      (type_application
        (atom)))))

================================================================================
qualified type application
================================================================================

-type alias() :: erlang:int().

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (atom)
    (type_expression
      (type_application
        (atom)
        (atom)))))

================================================================================
lists
================================================================================

-type a_list() :: [alias()].

-type b_list() :: [alias(), ...].

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (atom)
    (type_expression
      (type_list
        (type_expression
          (type_application
            (atom))))))
  (type_declaration
    (atom)
    (type_expression
      (type_nonempty_list
        (type_expression
          (type_application
            (atom)))))))

================================================================================
unions
================================================================================
-type union() :: a | b | c.

-type nested_union() :: a | {b | c}.

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (atom)
    (type_expression
      (type_atom
        (atom))
      (type_atom
        (atom))
      (type_atom
        (atom))))
  (type_declaration
    (atom)
    (type_expression
      (type_atom
        (atom))
      (type_tuple
        (type_expression
          (type_atom
            (atom))
          (type_atom
            (atom)))))))

================================================================================
maps and records
================================================================================

-type empty_map() :: #{}.

-type record() :: #r{}.

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (atom)
    (type_expression
      (type_map)))
  (type_declaration
    (atom)
    (type_expression
      (type_record
        (atom)))))

================================================================================
function types
================================================================================

-spec fn() -> unit.

-callback cb(a()) -> some() | type.

-spec ok(Var :: term()) -> ok.

--------------------------------------------------------------------------------

(source_file
  (function_spec
    (atom)
    (type_expression
      (type_atom
        (atom))))
  (function_spec
    (atom)
    (type_expression
      (type_application
        (atom)))
    (type_expression
      (type_application
        (atom))
      (type_atom
        (atom))))
  (function_spec
    (atom)
    (type_expression
      (type_binding
        (variable)
        (type_expression
          (type_application (atom)))))
    (type_expression
      (type_atom
        (atom)))))

================================================================================
ADTs
================================================================================

-type option(A) :: {some, A} | none.

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (atom)
    (variable)
    (type_expression
      (type_tuple
        (type_expression
          (type_atom
            (atom)))
        (type_expression
          (type_variable
            (variable))))
      (type_atom
        (atom)))))
